[gd_scene load_steps=4 format=2]

[ext_resource path="res://Boss/Flèche2.gd" type="Script" id=1]
[ext_resource path="res://Ennemi/Monstre2.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="Flèche" type="Area2D"]
z_index = 1
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 2.37714
texture = ExtResource( 2 )
vframes = 2
frame = 1

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.78814e-07, 1 )
scale = Vector2( 0.8, 0.8 )

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
